// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: big 1`] = `
<Fragment>
  <i
    className="spacer-left status-indicator big-status-indicator my-class"
  />
</Fragment>
`;

exports[`should render correctly: default 1`] = `
<Fragment>
  <i
    className="spacer-left status-indicator my-class"
  />
</Fragment>
`;

exports[`should render correctly: green 1`] = `
<Fragment>
  system.current_health.green
  <i
    className="spacer-left status-indicator green my-class"
  />
</Fragment>
`;

exports[`should render correctly: small 1`] = `
<Fragment>
  <i
    className="spacer-left status-indicator small-status-indicator my-class"
  />
</Fragment>
`;
